[package]
name = "bing_search_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3.28" # for our async / await blocks
tokio = { version = "1.28.2", features = ["full"] } # for our async runtim
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0"